feat: <SJQ-77> Implement support for YashanDB based on the DBeaver community devel branch