@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,11 +22,11 @@ import org.eclipse.jface.dialogs.IMessageProvider;
 import org.eclipse.jface.viewers.*;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.custom.CCombo;
 import org.eclipse.swt.custom.ControlEditor;
 import org.eclipse.swt.events.*;
 import org.eclipse.swt.graphics.Point;
-import org.eclipse.swt.layout.GridData;
-import org.eclipse.swt.layout.GridLayout;
+import org.eclipse.swt.layout.*;
 import org.eclipse.swt.widgets.*;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
@@ -37,6 +37,7 @@ import org.jkiss.dbeaver.model.app.DBPProject;
 import org.jkiss.dbeaver.model.impl.DBObjectNameCaseTransformer;
 import org.jkiss.dbeaver.model.impl.struct.RelationalObjectType;
 import org.jkiss.dbeaver.model.navigator.DBNDatabaseNode;
+import org.jkiss.dbeaver.model.navigator.DBNModel;
 import org.jkiss.dbeaver.model.navigator.DBNNode;
 import org.jkiss.dbeaver.model.navigator.DBNUtils;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
@@ -59,16 +60,13 @@ import org.jkiss.dbeaver.ui.*;
 import org.jkiss.dbeaver.ui.controls.CustomComboBoxCellEditor;
 import org.jkiss.dbeaver.ui.controls.ObjectContainerSelectorPanel;
 import org.jkiss.dbeaver.ui.controls.TreeContentProvider;
-import org.jkiss.dbeaver.ui.dialogs.EnterNameDialog;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 
 import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.*;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
@@ -76,11 +74,14 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
 
     private static final String TARGET_NAME_BROWSE = "[browse]";
     private final List<DatabaseMappingContainer> model = new ArrayList<>();
-    private TreeViewer mappingViewer;
+    protected TreeViewer mappingViewer;
+    protected Composite buttonsPanel;
+    private Button configureButton;
+    private Button previewButton;
     private Button loadMappingsButton;
-    private Button autoAssignButton;
     private Button upButton;
     private Button downButton;
+    protected Button mappingRules;
     private ObjectContainerSelectorPanel containerPanel;
     private boolean firstInit = true;
     private String mappingErrorMessage;
@@ -99,7 +100,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         setPageComplete(false);
     }
 
-    private DatabaseConsumerSettings getDatabaseConsumerSettings() {
+    protected DatabaseConsumerSettings getDatabaseConsumerSettings() {
         return getWizard().getPageSettings(this, DatabaseConsumerSettings.class);
     }
 
@@ -124,11 +125,12 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                 @Override
                 protected DBNNode getSelectedNode() {
                     DBSObjectContainer container = settings.getContainer();
-                    DBNNode selectedNode = DBWorkbench.getPlatform().getNavigatorModel().getNodeByObject(container);
+                    DBNModel navigatorModel = DBWorkbench.getPlatform().getNavigatorModel();
+                    DBNNode selectedNode = navigatorModel.getNodeByObject(container);
                     if (selectedNode == null && !settings.getDataMappings().isEmpty()) {
                         // Use first source object as cur selection (it's better than nothing)
                         DBSDataContainer firstSource = settings.getDataMappings().keySet().iterator().next();
-                        selectedNode = DBWorkbench.getPlatform().getNavigatorModel().getNodeByObject(firstSource);
+                        selectedNode = navigatorModel.getNodeByObject(firstSource);
                         while (selectedNode != null) {
                             if (selectedNode instanceof DBSWrapper && ((DBSWrapper) selectedNode).getObject() instanceof DBSObjectContainer) {
                                 break;
@@ -171,28 +173,16 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
 
         {
             // Control buttons
-            Composite buttonsPanel = UIUtils.createComposite(mappingsGroup, 1);
+            buttonsPanel = UIUtils.createComposite(mappingsGroup, 1);
             buttonsPanel.setLayoutData(new GridData(GridData.FILL_VERTICAL));
-
-            final Button mapTableButton = UIUtils.createDialogButton(buttonsPanel,
-                DTMessages.data_transfer_db_consumer_existing_table,
-                DBIcon.TREE_TABLE,
-                DTMessages.data_transfer_db_consumer_existing_table_description,
-                new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e)
-                    {
-                        mapExistingTables(getSelectedMappingContainers());
-                    }
-                });
-            mapTableButton.setEnabled(false);
 
             UIUtils.createLabelSeparator(buttonsPanel, SWT.HORIZONTAL);
 
-            final Button configureButton = UIUtils.createDialogButton(buttonsPanel,
-                DTMessages.data_transfer_db_consumer_button_configure,
+            configureButton = UIUtils.createDialogButton(
+                buttonsPanel,
+                DTMessages.data_transfer_db_consumer_button_customise,
                 DBIcon.TREE_COLUMNS,
-                DTMessages.data_transfer_db_consumer_button_configure_description,
+                DTMessages.data_transfer_db_consumer_button_customise_description,
                 new SelectionAdapter() {
                     @Override
                     public void widgetSelected(SelectionEvent e)
@@ -205,7 +195,8 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                 });
             configureButton.setEnabled(false);
 
-            final Button previewButton = UIUtils.createDialogButton(buttonsPanel,
+            previewButton = UIUtils.createDialogButton(
+                buttonsPanel,
                 DTMessages.data_transfer_wizard_page_preview_name,
                 UIIcon.SQL_PREVIEW,
                 DTMessages.data_transfer_wizard_page_preview_description,
@@ -270,17 +261,18 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
 
             UIUtils.createEmptyLabel(buttonsPanel, 1, 1).setLayoutData(new GridData(GridData.FILL_VERTICAL));
 
-            autoAssignButton = UIUtils.createDialogButton(buttonsPanel,
-                DTMessages.data_transfer_db_consumer_auto_assign,
-                UIIcon.ASTERISK,
-                DTMessages.data_transfer_db_consumer_auto_assign_description,
+            mappingRules = UIUtils.createDialogButton(
+                buttonsPanel,
+                DTMessages.data_transfer_db_consumer_mapping_rules_button,
+                UIIcon.CONFIGURATION,
+                DTMessages.data_transfer_db_consumer_mapping_rules_button_tip,
                 new SelectionAdapter() {
                     @Override
-                    public void widgetSelected(SelectionEvent e)
-                    {
-                        autoAssignMappings();
+                    public void widgetSelected(SelectionEvent e) {
+                        updateMappingRules();
                     }
                 });
+            mappingRules.setEnabled(false);
 
             mappingViewer.getTree().addKeyListener(new KeyAdapter() {
                 @Override
@@ -294,11 +286,9 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                         } else if (e.character == SWT.DEL) {
                             for (TreeItem item : mappingViewer.getTree().getSelection()) {
                                 element = item.getData();
-                                if (element instanceof DatabaseMappingAttribute) {
-                                    DatabaseMappingAttribute attribute = (DatabaseMappingAttribute) element;
+                                if (element instanceof DatabaseMappingAttribute attribute) {
                                     attribute.setMappingType(DatabaseMappingType.skip);
-                                } else if (element instanceof DatabaseMappingContainer) {
-                                    DatabaseMappingContainer container = (DatabaseMappingContainer) element;
+                                } else if (element instanceof DatabaseMappingContainer container) {
                                     container.refreshMappingType(getWizard().getRunnableContext(), DatabaseMappingType.skip, false);
                                 }
                                 selectNextColumn(item);
@@ -311,8 +301,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                                     DatabaseMappingAttribute attribute = (DatabaseMappingAttribute) item.getData();
                                     attribute.setMappingType(DatabaseMappingType.existing);
                                     attribute.updateMappingType(new LoggingProgressMonitor(log), false, false);
-                                } else if (element instanceof DatabaseMappingContainer) {
-                                    DatabaseMappingContainer container = (DatabaseMappingContainer) element;
+                                } else if (element instanceof DatabaseMappingContainer container) {
                                     getWizard().runWithProgress(monitor ->
                                         setMappingTarget(
                                             monitor,
@@ -324,7 +313,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                                 selectNextColumn(item);
                             }
                             updated = true;
-                        } else if (e.keyCode == SWT.INSERT) {
+                        } else if (e.keyCode == SWT.SHIFT) {
                             TreeItem[] selection = mappingViewer.getTree().getSelection();
                             if (selection.length > 0) {
                                 mappingViewer.editElement(selection[0].getData(), 1);
@@ -345,21 +334,11 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                         }
                     } catch (DBException e1) {
                         DBWorkbench.getPlatformUI().showError(DTUIMessages.database_consumer_page_mapping_title_error_mapping_table,
-                                DTUIMessages.database_consumer_page_mapping_message_error_mapping_target_table, e1);
+                            DTUIMessages.database_consumer_page_mapping_message_error_mapping_target_table, e1);
                     }
                 }
             });
-            mappingViewer.addSelectionChangedListener(event -> {
-                DatabaseMappingObject mapping = getSelectedMapping();
-                mapTableButton.setEnabled(mapping instanceof DatabaseMappingContainer);
-                //createNewButton.setEnabled(mapping instanceof DatabaseMappingContainer && settings.getContainerNode() != null);
-                final boolean hasMappings = settings.getContainer() != null &&
-                    ((mapping instanceof DatabaseMappingContainer && mapping.getMappingType() != DatabaseMappingType.unspecified) ||
-                    (mapping instanceof DatabaseMappingAttribute && ((DatabaseMappingAttribute) mapping).getParent().getMappingType() != DatabaseMappingType.unspecified));
-                configureButton.setEnabled(hasMappings);
-                previewButton.setEnabled(hasMappings);
-                updateUpAndDownButtons();
-            });
+            mappingViewer.addSelectionChangedListener(this::onMappingChanged);
             mappingViewer.addDoubleClickListener(event -> {
                 DatabaseMappingObject selectedMapping = getSelectedMapping();
                 if (selectedMapping != null) {
@@ -439,12 +418,11 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             mappingViewer.getTree().setLinesVisible(false);
         }
 
-        UIUtils.setControlContextMenu(mappingViewer.getTree(), manager -> {
+        UIWidgets.setControlContextMenu(mappingViewer.getTree(), manager -> {
             IStructuredSelection selection = (IStructuredSelection) mappingViewer.getSelection();
             if (!selection.isEmpty()) {
                 Object element = selection.getFirstElement();
-                if (element instanceof DatabaseMappingAttribute) {
-                    DatabaseMappingAttribute mapping= (DatabaseMappingAttribute) element;
+                if (element instanceof DatabaseMappingAttribute mapping) {
                     if (mapping.getTransformer() != null && !mapping.getTransformer().getProperties().isEmpty()) {
                         manager.add(new Action("Transformer settings ...") {
                             @Override
@@ -461,7 +439,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                     }
                 }
             }
-            UIUtils.fillDefaultTreeContextMenu(manager, mappingViewer.getTree());
+            UIWidgets.fillDefaultTreeContextMenu(manager, mappingViewer.getTree());
         });
 
         {
@@ -470,7 +448,11 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                 @Override
                 public void update(ViewerCell cell) {
                     DatabaseMappingObject mapping = (DatabaseMappingObject) cell.getElement();
-                    cell.setText(DBUtils.getObjectFullName(mapping.getSource(), DBPEvaluationContext.UI));
+                    if (!(cell.getElement() instanceof DatabaseMappingAttribute)) {
+                        cell.setText(DBUtils.getObjectFullName(mapping.getSource(), DBPEvaluationContext.UI));
+                    } else {
+                        cell.setText(mapping.getSource().getName());
+                    }
                     if (mapping.getIcon() != null) {
                         cell.setImage(DBeaverIcons.getImage(mapping.getIcon()));
                     }
@@ -520,9 +502,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                         if (!CommonUtils.isEmpty(targetName)) {
                             return targetName;
                         }
-                        String newName = transformTargetName(DBUtils.getQuotedIdentifier(mapping.getSource()));
-                        //setValue(element, newName);
-                        return newName;
+                        return transformTargetName(DBUtils.getQuotedIdentifier(mapping.getSource()), DatabaseMappingType.unspecified);
                     }
                     if (mapping instanceof DatabaseMappingContainer) {
                         DBSDataManipulator target = ((DatabaseMappingContainer) mapping).getTarget();
@@ -540,7 +520,9 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                     final DatabaseConsumerSettings settings = getDatabaseConsumerSettings();
                     String name = CommonUtils.toString(value);
                     DBPDataSource dataSource = settings.getTargetDataSource((DatabaseMappingObject) element);
-                    if (!name.equals(DatabaseMappingAttribute.TARGET_NAME_SKIP) && !name.equals(TARGET_NAME_BROWSE) && dataSource != null) {
+                    if (!name.equals(DatabaseMappingAttribute.TARGET_NAME_SKIP) && !name.equals(TARGET_NAME_BROWSE)
+                        && dataSource != null && !DBUtils.isQuotedIdentifier(dataSource, name)
+                    ) {
                         name = DBObjectNameCaseTransformer.transformName(dataSource, name);
                     }
                     String finalName = name;
@@ -649,7 +631,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                         List<DataTransferAttributeTransformerDescriptor> transformers = DataTransferRegistry.getInstance().getAttributeTransformers();
                         transformers.add(0, null);
 
-                        List<String> tsfNames = transformers.stream().map(t->t == null ? "" : t.getName()).collect(Collectors.toList());
+                        List<String> tsfNames = transformers.stream().map(t->t == null ? "" : t.getName()).toList();
 
                         return new CustomComboBoxCellEditor(
                             mappingViewer,
@@ -715,7 +697,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             public Object[] getChildren(Object parentElement)
             {
                 if (parentElement instanceof DatabaseMappingContainer) {
-                    return ((DatabaseMappingContainer) parentElement).getAttributeMappings(getWizard().getRunnableContext()).toArray();
+                    return ((DatabaseMappingContainer) parentElement).getAttributeMappings().toArray();
                 }
                 return null;
             }
@@ -764,12 +746,13 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             SWT.DROP_DOWN | SWT.READ_ONLY);
     }
 
-    private CellEditor createTargetEditor(Object element) throws DBException
-    {
+    private CellEditor createTargetEditor(Object element) throws DBException {
         final DatabaseConsumerSettings settings = getDatabaseConsumerSettings();
         boolean allowsCreate = true;
         List<String> items = new ArrayList<>();
-        if (element instanceof DatabaseMappingContainer) {
+        boolean isContainer = element instanceof DatabaseMappingContainer;
+
+        if (isContainer) {
             if (settings.getContainer() == null) {
                 allowsCreate = false;
             }
@@ -778,39 +761,150 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                 DBSObjectContainer container = settings.getContainer();
                 for (DBSObject child : container.getChildren(new LoggingProgressMonitor(log))) {
                     if (child instanceof DBSDataManipulator) {
-                        items.add(transformTargetName(DBUtils.getQuotedIdentifier(child)));
+                        items.add(transformTargetName(
+                            DBUtils.getQuotedIdentifier(child),
+                            ((DatabaseMappingContainer) element).getMappingType()));
                     }
                 }
-
             }
             items.add(TARGET_NAME_BROWSE);
         } else {
             DatabaseMappingAttribute mapping = (DatabaseMappingAttribute) element;
-            switch (mapping.getParent().getMappingType()) {
-                case skip:
-                case unspecified:
-                    allowsCreate = false;
-                    break;
-            }
+            allowsCreate = switch (mapping.getParent().getMappingType()) {
+                case skip, unspecified -> false;
+                default -> true;
+            };
             DBSDataManipulator target = mapping.getParent().getTarget();
-            if (target instanceof DBSEntity) {
-                DBSEntity parentEntity = (DBSEntity) target;
+            if (target instanceof DBSEntity parentEntity) {
                 for (DBSEntityAttribute attr : parentEntity.getAttributes(new LoggingProgressMonitor(log))) {
-                    items.add(transformTargetName(DBUtils.getQuotedIdentifier(attr)));
+                    items.add(transformTargetName(DBUtils.getQuotedIdentifier(attr), mapping.getMappingType()));
                 }
-            } else if (target == null) {
+            } else if (target == null && mapping.getSource() != null) {
                 // New table?
-                items.add(transformTargetName(DBUtils.getQuotedIdentifier(mapping.getSource())));
+                items.add(transformTargetName(DBUtils.getQuotedIdentifier(mapping.getSource()), mapping.getMappingType()));
             }
 
         }
         items.add(DatabaseMappingAttribute.TARGET_NAME_SKIP);
-        CustomComboBoxCellEditor editor = new CustomComboBoxCellEditor(
-            mappingViewer,
-            mappingViewer.getTree(),
-            items.toArray(new String[0]),
-            SWT.DROP_DOWN | (allowsCreate ? SWT.NONE : SWT.READ_ONLY));
-        return editor;
+        boolean finalAllowsCreate = allowsCreate;
+        return new DialogCellEditor(mappingViewer.getTree()) {
+            private CCombo combo;
+            private Button browseButton;
+
+            @Override
+            protected Control createControl(Composite parent) {
+                FormLayout fl = new FormLayout();
+                fl.marginWidth = 0;
+                fl.marginHeight = 0;
+                fl.spacing = 0;
+                Composite composite = new Composite(parent, SWT.NONE);
+                composite.setLayout(fl);
+
+                browseButton = new Button(composite, SWT.PUSH);
+                browseButton.setImage(DBeaverIcons.getImage(UIIcon.DOTS_BUTTON));
+                browseButton.setToolTipText(DTUIMessages.database_consumer_page_mapping_browse_button_tooltip);
+                FormData btnFd = new FormData();
+                btnFd.top = new FormAttachment(0, 0);
+                btnFd.bottom = new FormAttachment(100, 0);
+                btnFd.right = new FormAttachment(100, 0);
+                browseButton.setLayoutData(btnFd);
+                if (!isContainer) {
+                    browseButton.setVisible(false);
+                }
+
+                combo = new CCombo(
+                    composite,
+                    SWT.DROP_DOWN | (finalAllowsCreate ? SWT.NONE : SWT.READ_ONLY));
+                combo.setVisibleItemCount(15);
+                combo.setItems(items.toArray(new String[0]));
+                FormData comboFd = new FormData();
+                comboFd.top = new FormAttachment(0, 0);
+                comboFd.bottom = new FormAttachment(100, 0);
+                comboFd.left = new FormAttachment(0, 0);
+                comboFd.right = isContainer
+                    ? new FormAttachment(browseButton, 0)
+                    : new FormAttachment(100, 0);
+                comboFd.width = 200;
+                combo.setLayoutData(comboFd);
+
+                combo.addSelectionListener(new SelectionAdapter() {
+                    @Override
+                    public void widgetSelected(SelectionEvent e) {
+                        String sel = combo.getText();
+                        if (TARGET_NAME_BROWSE.equals(sel) && isContainer) {
+                            doSetValue(doGetValue());
+                            openDialogBox(composite);
+                        } else {
+                            markDirty();
+                            doSetValue(sel);
+                            fireApplyEditorValue();
+                        }
+                    }
+                });
+
+                combo.addTraverseListener(e -> {
+                    fireApplyEditorValue();
+                    e.doit = false;
+                });
+
+                if (isContainer) {
+                    browseButton.addSelectionListener(new SelectionAdapter() {
+                        @Override
+                        public void widgetSelected(SelectionEvent e) {
+                            Object newVal = openDialogBox(composite);
+                            doSetValue(newVal);
+                            markDirty();
+                            fireApplyEditorValue();
+                        }
+                    });
+                }
+
+                return composite;
+            }
+
+            @Override
+            protected void doSetFocus() {
+                if (combo != null && !combo.isDisposed()) {
+                    combo.setFocus();
+                }
+            }
+
+            @Override
+            protected Object openDialogBox(Control cellEditorWindow) {
+                mapExistingTables(new DatabaseMappingContainer[]{ (DatabaseMappingContainer) element });
+                return ((DatabaseMappingContainer) element).getTargetName();
+            }
+
+            @Override
+            protected void updateContents(Object value) {
+                if (combo != null && !combo.isDisposed()) {
+                    combo.setText(value == null ? "" : value.toString());
+                }
+            }
+
+            @Override
+            protected Object doGetValue() {
+                return combo != null && !combo.isDisposed()
+                    ? combo.getText()
+                    : "";
+            }
+
+            @Override
+            protected void doSetValue(Object value) {
+                if (combo == null || combo.isDisposed()) {
+                    return;
+                }
+                if (value == null) {
+                    combo.setText("");
+                } else {
+                    if (value instanceof DBPNamedObject dbpNamedObject) {
+                        combo.setText(dbpNamedObject.getName());
+                    } else {
+                        combo.setText(CommonUtils.toString(value));
+                    }
+                }
+            }
+        };
     }
 
     private void setMappingTarget(DBRProgressMonitor monitor, DatabaseMappingObject mapping, String name, boolean forceRefresh, boolean updateAttributesNames) {
@@ -829,9 +923,8 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             } else if (name.equals(TARGET_NAME_BROWSE)) {
                 mapExistingTable((DatabaseMappingContainer) mapping);
             } else {
-                name = transformTargetName(name);
-                if (mapping instanceof DatabaseMappingContainer) {
-                    DatabaseMappingContainer containerMapping = (DatabaseMappingContainer) mapping;
+                name = transformTargetName(name, mapping.getMappingType());
+                if (mapping instanceof DatabaseMappingContainer containerMapping) {
                     if (settings.getContainer() != null) {
                         // container's tables
                         DBSObjectContainer container = settings.getContainer();
@@ -858,9 +951,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                                         mappingErrorMessage =
                                             "Name '" + unQuotedNameForSearch + "' is already used by " + DBUtils.getObjectTypeName(existingObject);
 
-                                        UIUtils.asyncExec(() -> {
-                                            mappingViewer.refresh();
-                                        });
+                                        UIUtils.asyncExec(() -> mappingViewer.refresh());
                                         return;
                                     }
                                 }
@@ -910,14 +1001,13 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                 } else {
                     DatabaseMappingAttribute attrMapping = (DatabaseMappingAttribute) mapping;
                     DBPDataSource targetDataSource = settings.getTargetDataSource(mapping);
-                    if (targetDataSource != null) {
-                        name = DBUtils.getUnQuotedIdentifier(targetDataSource, name);
-                    }
-                    if (attrMapping.getParent().getTarget() instanceof DBSEntity) {
-                        DBSEntity parentEntity = (DBSEntity) attrMapping.getParent().getTarget();
+                    if (attrMapping.getParent().getTarget() instanceof DBSEntity parentEntity) {
                         Iterable<? extends DBSEntityAttribute> attributes = parentEntity.getAttributes(new LoggingProgressMonitor(log));
                         if (attributes != null) {
-                            DBSEntityAttribute matchingAttribute = CommonUtils.findBestCaseAwareMatch(attributes, name, DBSEntityAttribute::getName);
+                            DBSEntityAttribute matchingAttribute = CommonUtils.findBestCaseAwareMatch(
+                                attributes,
+                                targetDataSource != null ? DBUtils.getUnQuotedIdentifier(targetDataSource, name) : name, // unquote for better search
+                                DBSEntityAttribute::getName);
                             if (matchingAttribute != null) {
                                 attrMapping.setMappingType(DatabaseMappingType.existing);
                                 attrMapping.setTarget(matchingAttribute);
@@ -927,7 +1017,8 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                         }
                     }
                     attrMapping.setMappingType(DatabaseMappingType.create);
-                    attrMapping.setTargetName(name);
+                    attrMapping.setTargetName(updateAttributesNames && targetDataSource != null
+                        ? DBUtils.getUnQuotedIdentifier(targetDataSource, name) : name);
                 }
                 UIUtils.asyncExec(this::updateMappingsAndButtons);
             }
@@ -938,9 +1029,28 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         }
     }
 
-    void autoAssignMappings() {
+    private void updateMappingRules() {
+        DBSObjectContainer container = getDatabaseConsumerSettings().getContainer();
+        if (container == null) {
+            return;
+        }
+        DBPDataSource dataSource = container.getDataSource();
+        if (dataSource == null) {
+            return;
+        }
         List<Object> elementList = Arrays.stream(mappingViewer.getTree().getItems())
             .map(Widget::getData).collect(Collectors.toList());
+        MappingRulesDialog dialog = new MappingRulesDialog(getShell(), dataSource, elementList);
+        if (dialog.open() == IDialogConstants.OK_ID) {
+            mappingViewer.refresh();
+            updateMappingsAndButtons();
+            updatePageCompletion();
+        }
+    }
+
+    void autoAssignMappings() {
+        List<Object> elementList = Arrays.stream(mappingViewer.getTree().getItems())
+            .map(Widget::getData).toList();
 
         getWizard().runWithProgress(monitor -> {
             if (getWizard().getSettings().getDataPipes().size() > 1) {
@@ -948,26 +1058,13 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             }
             //loadAndUpdateColumnsModel();
             for (Object element : elementList) {
-                if (element instanceof DatabaseMappingContainer) {
-                    DatabaseMappingContainer container = (DatabaseMappingContainer) element;
+                if (element instanceof DatabaseMappingContainer container) {
                     setMappingTarget(monitor, container, container.getTargetName(), true, false);
                 }
             }
         });
         updateMappingsAndButtons();
         updatePageCompletion();
-    }
-
-    private void updateAutoAssign() {
-        boolean hasUnassigned = false;
-        final DatabaseConsumerSettings settings = getDatabaseConsumerSettings();
-        for (DatabaseMappingContainer mapping : settings.getDataMappings().values()) {
-            if (mapping.getMappingType() == DatabaseMappingType.unspecified || mapping.getMappingType() == DatabaseMappingType.skip) {
-                hasUnassigned = true;
-                break;
-            }
-        }
-        autoAssignButton.setEnabled(hasUnassigned);
     }
 
     private void mapExistingTable(@NotNull DatabaseMappingContainer mapping) {
@@ -980,13 +1077,14 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         DBPProject activeProject = DBWorkbench.getPlatform().getWorkspace().getActiveProject();
         if (activeProject != null) {
             DBNNode rootNode = DBNUtils.getNodeByObject(settings.getContainer());
+            DBNModel navigatorModel = DBWorkbench.getPlatform().getNavigatorModel();
             if (rootNode == null) {
-                rootNode = DBWorkbench.getPlatform().getNavigatorModel().getRoot().getProjectNode(
+                rootNode = navigatorModel.getRoot().getProjectNode(
                     activeProject).getDatabases();
             }
             DBNNode selectedNode = rootNode;
             if (mappings.length == 1 && mappings[0].getTarget() != null) {
-                selectedNode = DBWorkbench.getPlatform().getNavigatorModel().getNodeByObject(mappings[0].getTarget());
+                selectedNode = navigatorModel.getNodeByObject(mappings[0].getTarget());
             }
             DBNNode node = DBWorkbench.getPlatformUI().selectObject(
                 getShell(),
@@ -1007,7 +1105,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                             if (mappings.length == 1) {
                                 // Call to this method also shows up a dialog.
                                 // It could be very noisy in case of a large amount of mappings
-                                mapColumnsAndTable(mapping);
+                                UIUtils.asyncExec(() -> mapColumnsAndTable(mapping));
                             } else {
                                 needsUpdate = true;
                             }
@@ -1022,7 +1120,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                     }
                 } catch (DBException e) {
                     DBWorkbench.getPlatformUI().showError(DTUIMessages.database_consumer_page_mapping_title_error_mapping_table,
-                            DTUIMessages.database_consumer_page_mapping_message_error_mapping_existing_table, e);
+                        DTUIMessages.database_consumer_page_mapping_message_error_mapping_existing_table, e);
                 }
                 updateMappingsAndButtons();
                 updatePageCompletion();
@@ -1030,34 +1128,18 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         }
     }
 
-    private void updateMappingsAndButtons() {
+    public void updateMappingsAndButtons() {
         mappingViewer.refresh();
         mappingViewer.setSelection(mappingViewer.getSelection());
     }
 
-    private void mapNewTable(DatabaseMappingContainer mapping)
-    {
-        String tableName = EnterNameDialog.chooseName(
-            getShell(),
-            DTUIMessages.database_consumer_page_mapping_table_name,
-            transformTargetName(mapping.getMappingType() == DatabaseMappingType.create ? mapping.getTargetName() : ""));
-        if (!CommonUtils.isEmpty(tableName)) {
-            try {
-                mapping.setTargetName(tableName);
-                mapping.refreshMappingType(getWizard().getRunnableContext(), DatabaseMappingType.create, false);
-                updateMappingsAndButtons();
-                updatePageCompletion();
-            } catch (DBException e) {
-                DBWorkbench.getPlatformUI().showError(DTUIMessages.database_consumer_page_mapping_title_mapping_error,
-                        DTUIMessages.database_consumer_page_mapping_message_error_mapping_new_table, e);
-            }
-        }
-    }
-
-    private String transformTargetName(String name) {
+    private String transformTargetName(String name, @NotNull DatabaseMappingType mappingType) {
         DBSObjectContainer container = getDatabaseConsumerSettings().getContainer();
-        if (container == null) {
+        if (container == null || container.getDataSource() == null) {
             return name;
+        }
+        if (mappingType == DatabaseMappingType.create) {
+            return DatabaseTransferUtils.getTransformedName(container.getDataSource(), name, false);
         }
         return DBObjectNameCaseTransformer.transformName(container.getDataSource(), name);
     }
@@ -1107,7 +1189,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
     }
 
     @Nullable
-    private DataTransferPipe getPipe(DatabaseMappingContainer mappingContainer) {
+    protected DataTransferPipe getPipe(DatabaseMappingContainer mappingContainer) {
         final DatabaseConsumerSettings settings = getDatabaseConsumerSettings();
         for (DataTransferPipe pipe : getWizard().getSettings().getDataPipes()) {
             if (pipe.getProducer() == null) {
@@ -1122,8 +1204,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         return null;
     }
 
-    private DatabaseMappingObject getSelectedMapping()
-    {
+    protected DatabaseMappingObject getSelectedMapping() {
         IStructuredSelection selection = (IStructuredSelection) mappingViewer.getSelection();
         return selection.isEmpty() ? null : (DatabaseMappingObject) selection.getFirstElement();
     }
@@ -1224,24 +1305,57 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         model.clear();
 
         List<Throwable> errors = new ArrayList<>();
+
         try {
+            Set<DBSObjectContainer> containersToCache = new HashSet<>();
+
+            for (DataTransferPipe pipe : getWizard().getSettings().getDataPipes()) {
+                if (pipe.getProducer() == null) {
+                    continue;
+                }
+                DBSObject dbObject = pipe.getProducer().getDatabaseObject();
+                if (!(dbObject instanceof DBSDataContainer sourceDataContainer)) {
+                    continue;
+                }
+
+                DBSObject parentObject = sourceDataContainer.getParentObject();
+                DBSObjectContainer container = DBUtils.getAdapter(DBSObjectContainer.class, parentObject);
+                if (container != null) {
+                    containersToCache.add(container);
+                }
+            }
+
             getWizard().getRunnableContext().run(true, true, monitor -> {
+                for (DBSObjectContainer container : containersToCache) {
+                    try {
+                        container.cacheStructure(monitor, DBSObjectContainer.STRUCT_ATTRIBUTES);
+                    } catch (DBException e) {
+                        errors.add(e);
+                        log.debug(
+                            "Error structure for container '" +
+                                DBUtils.getObjectFullName(container, DBPEvaluationContext.UI) + "'",
+                            e
+                        );
+                    }
+                }
                 for (DataTransferPipe pipe : getWizard().getSettings().getDataPipes()) {
-                    if (pipe.getProducer() == null || !(pipe.getProducer().getDatabaseObject() instanceof DBSDataContainer)) {
+                    if (pipe.getProducer() == null || !(pipe.getProducer().getDatabaseObject() instanceof DBSDataContainer sourceDataContainer)) {
                         continue;
                     }
-                    DBSDataContainer sourceDataContainer = (DBSDataContainer) pipe.getProducer().getDatabaseObject();
+
                     DatabaseMappingContainer mapping = settings.getDataMapping(sourceDataContainer);
+
                     // Create new mapping for source object
                     DatabaseMappingContainer newMapping;
                     IDataTransferConsumer<?, ?> pipeConsumer = pipe.getConsumer();
-                    if (pipeConsumer instanceof DatabaseTransferConsumer && ((DatabaseTransferConsumer) pipeConsumer).getTargetObject() != null) {
+                    if (pipeConsumer instanceof DatabaseTransferConsumer databaseTransferConsumer && databaseTransferConsumer.getTargetObject() != null) {
                         try {
                             newMapping = new DatabaseMappingContainer(
                                 monitor,
                                 getDatabaseConsumerSettings(),
                                 sourceDataContainer,
-                                ((DatabaseTransferConsumer) pipe.getConsumer()).getTargetObject());
+                                databaseTransferConsumer.getTargetObject()
+                            );
                         } catch (DBException e) {
                             errors.add(e);
                             newMapping = new DatabaseMappingContainer(getDatabaseConsumerSettings(), sourceDataContainer);
@@ -1249,7 +1363,9 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
                     } else {
                         newMapping = new DatabaseMappingContainer(getDatabaseConsumerSettings(), sourceDataContainer);
                     }
-                    newMapping.getAttributeMappings(getWizard().getRunnableContext());
+
+                    newMapping.getAttributeMappings(monitor);
+
                     // Update current mapping if it differs from new one
                     if (mapping == null || !mapping.isSameMapping(newMapping)) {
                         mapping = newMapping;
@@ -1270,7 +1386,6 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             setMessage(lastError.getMessage(), IMessageProvider.ERROR);
         }
 
-
         mappingViewer.getTree().setVisible(false);
         Object[] expandedElements = mappingViewer.getExpandedElements();
         mappingViewer.setInput(model);
@@ -1282,6 +1397,7 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
             mappingViewer.setSelection(new StructuredSelection(model.get(0)));
         }
     }
+
 
     @Override
     protected boolean determinePageCompletion()
@@ -1307,7 +1423,6 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
     @Override
     protected void updatePageCompletion() {
         super.updatePageCompletion();
-        updateAutoAssign();
     }
 
     private DataTransferAttributeTransformerDescriptor getTransformer(Object element) {
@@ -1322,5 +1437,30 @@ public class DatabaseConsumerPageMapping extends DataTransferPageNodeSettings {
         return isConsumerOfType(DatabaseTransferConsumer.class);
     }
 
+    protected void onMappingChanged(SelectionChangedEvent event) {
+        boolean hasMappings = hasMappings(getSelectedMapping());
+        configureButton.setEnabled(hasMappings);
+        previewButton.setEnabled(hasMappings);
+        mappingRules.setEnabled(hasMappings);
+        updateUpAndDownButtons();
+    }
 
+    protected boolean hasMappings(@Nullable DatabaseMappingObject mapping) {
+        // There is nothing to check if the target container is not chosen
+        if (getDatabaseConsumerSettings().getContainer() == null) {
+            return false;
+        }
+
+        if (mapping == null) {
+            return false;
+        }
+
+        if (mapping instanceof DatabaseMappingContainer container) {
+            return container.getMappingType() != DatabaseMappingType.unspecified;
+        }
+        if (mapping instanceof DatabaseMappingAttribute attribute) {
+            return attribute.getParent().getMappingType() != DatabaseMappingType.unspecified;
+        }
+        return false;
+    }
 }
