@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,8 @@
  */
 package org.jkiss.dbeaver.model.impl.edit;
 
+import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBPObject;
@@ -59,6 +61,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         this.atomic = atomic;
     }
 
+    @Nullable
     @Override
     public DBCExecutionContext getExecutionContext()
     {
@@ -79,9 +82,9 @@ public abstract class AbstractCommandContext implements DBECommandContext {
     }
 
     @Override
-    public void saveChanges(DBRProgressMonitor monitor, Map<String, Object> options) throws DBException {
+    public void saveChanges(@NotNull DBRProgressMonitor monitor, @NotNull Map<String, Object> options) throws DBException {
         if (!executionContext.isConnected()) {
-            executionContext.invalidateContext(monitor, false);
+            executionContext.invalidateContext(monitor);
             if (!executionContext.isConnected()) {
                 throw new DBException("Context [" + executionContext.getContextName() + "] isn't connected to the database");
             }
@@ -89,7 +92,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
 
         // Execute commands in transaction
         DBCTransactionManager txnManager = DBUtils.getTransactionManager(executionContext);
-        boolean useAutoCommit = false;
+        boolean useAutoCommit;
 
         // Validate commands
         {
@@ -118,13 +121,14 @@ public abstract class AbstractCommandContext implements DBECommandContext {
                 }
             }
         }
+
         try {
             executeCommands(monitor, options, useAutoCommit ? null : txnManager);
 
             // Clear commands. We can't undo after save
             clearCommandQueues();
         } catch (Throwable e) {
-            // Rollback changes
+            // Rollback changes of last command
             if (txnManager != null && txnManager.isSupportsTransactions() && !txnManager.isAutoCommit()) {
                 try (DBCSession session = executionContext.openSession(monitor, DBCExecutionPurpose.UTIL, "Rollback script transaction")) {
                     session.enableLogging(false);
@@ -136,19 +140,8 @@ public abstract class AbstractCommandContext implements DBECommandContext {
             throw e;
         } finally {
             if (txnManager != null && txnManager.isSupportsTransactions()) {
-                try {
-                    try (DBCSession session = executionContext.openSession(monitor, DBCExecutionPurpose.UTIL, "Commit script transaction")) {
-                        if (!txnManager.isAutoCommit()) {
-                            session.enableLogging(false);
-                            txnManager.commit(session);
-                        }
-                    } finally {
-                        if (oldAutoCommit != useAutoCommit) {
-                            txnManager.setAutoCommit(monitor, oldAutoCommit);
-                        }
-                    }
-                } catch (DBCException e) {
-                    log.warn("Can't commit changes", e);
+                if (oldAutoCommit != useAutoCommit) {
+                    txnManager.setAutoCommit(monitor, oldAutoCommit);
                 }
             }
         }
@@ -221,9 +214,9 @@ public abstract class AbstractCommandContext implements DBECommandContext {
                                     throw error;
                                 }
                                 if (txnManager != null && txnManager.isSupportsTransactions() && !txnManager.isAutoCommit()) {
-                                    // Disable logging to avoid QM handlers notifications.
-                                    session.enableLogging(false);
-                                    // Commit all processed changes
+                                    // Commit all processed changes for every command
+                                    // Because most databases do not support transactional DDL
+                                    /// and we cannot revert saved changes anyway
                                     txnManager.commit(session);
                                 }
                             }
@@ -320,6 +313,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         }
     }
 
+    @NotNull
     @Override
     public Collection<? extends DBECommand<?>> getFinalCommands()
     {
@@ -339,6 +333,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         }
     }
 
+    @NotNull
     @Override
     public Collection<? extends DBECommand<?>> getUndoCommands()
     {
@@ -359,6 +354,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         }
     }
 
+    @NotNull
     @Override
     public Collection<DBPObject> getEditedObjects()
     {
@@ -372,15 +368,14 @@ public abstract class AbstractCommandContext implements DBECommandContext {
 
     @Override
     public void addCommand(
-        DBECommand command,
-        DBECommandReflector reflector)
+        @NotNull DBECommand<?> command,
+        @Nullable DBECommandReflector reflector)
     {
         addCommand(command, reflector, false);
     }
 
     @Override
-    public void addCommand(DBECommand command, DBECommandReflector reflector, boolean execute)
-    {
+    public void addCommand(@NotNull DBECommand<?> command, @Nullable DBECommandReflector reflector, boolean execute) {
         synchronized (commands) {
             commands.add(new CommandInfo(command, reflector));
 
@@ -394,38 +389,8 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         refreshCommandState();
     }
 
-/*
-    public void addCommandBatch(List<DBECommand> commandBatch, DBECommandReflector reflector, boolean execute)
-    {
-        if (commandBatch.isEmpty()) {
-            return;
-        }
-
-        synchronized (commands) {
-            CommandInfo prevInfo = null;
-            for (int i = 0, commandBatchSize = commandBatch.size(); i < commandBatchSize; i++) {
-                DBECommand command = commandBatch.get(i);
-                final CommandInfo info = new CommandInfo(command, i == 0 ? reflector : null);
-                info.prevInBatch = prevInfo;
-                commands.add(info);
-                prevInfo = info;
-            }
-            clearUndidCommands();
-            clearCommandQueues();
-        }
-
-        // Fire only single event
-        fireCommandChange(commandBatch.get(0));
-        if (execute && reflector != null) {
-            reflector.redoCommand(commandBatch.get(0));
-        }
-        refreshCommandState();
-    }
-*/
-
     @Override
-    public void removeCommand(DBECommand<?> command)
-    {
+    public void removeCommand(@NotNull DBECommand<?> command) {
         synchronized (commands) {
             for (CommandInfo cmd : commands) {
                 if (cmd.command == command) {
@@ -440,8 +405,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
     }
 
     @Override
-    public void updateCommand(DBECommand<?> command, DBECommandReflector commandReflector)
-    {
+    public void updateCommand(@NotNull DBECommand<?> command, @Nullable DBECommandReflector commandReflector) {
         synchronized (commands) {
             boolean found = false;
             for (CommandInfo cmd : commands) {
@@ -462,16 +426,14 @@ public abstract class AbstractCommandContext implements DBECommandContext {
     }
 
     @Override
-    public void addCommandListener(DBECommandListener listener)
-    {
+    public void addCommandListener(@NotNull DBECommandListener listener) {
         synchronized (listeners) {
             listeners.add(listener);
         }
     }
 
     @Override
-    public void removeCommandListener(DBECommandListener listener)
-    {
+    public void removeCommandListener(@NotNull DBECommandListener listener) {
         synchronized (listeners) {
             listeners.remove(listener);
         }
@@ -483,23 +445,22 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         return userParams;
     }
 
-    private void fireCommandChange(DBECommand<?> command)
-    {
+    private void fireCommandChange(@NotNull DBECommand<?> command) {
         for (DBECommandListener listener : getListeners()) {
             listener.onCommandChange(command);
         }
     }
 
-    DBECommandListener[] getListeners()
-    {
+    @NotNull
+    DBECommandListener[] getListeners() {
         synchronized (listeners) {
-            return listeners.toArray(new DBECommandListener[listeners.size()]);
+            return listeners.toArray(new DBECommandListener[0]);
         }
     }
 
+    @Nullable
     @Override
-    public DBECommand getUndoCommand()
-    {
+    public DBECommand<?> getUndoCommand() {
         synchronized (commands) {
             if (!commands.isEmpty()) {
                 CommandInfo cmd = commands.get(commands.size() - 1);
@@ -514,12 +475,12 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         }
     }
 
+    @Nullable
     @Override
-    public DBECommand getRedoCommand()
-    {
+    public DBECommand<?> getRedoCommand() {
         synchronized (commands) {
             if (!undidCommands.isEmpty()) {
-                CommandInfo cmd = undidCommands.get(undidCommands.size() - 1);
+                CommandInfo cmd = undidCommands.getLast();
                 while (cmd.prevInBatch != null) {
                     cmd = cmd.prevInBatch;
                 }
@@ -530,14 +491,13 @@ public abstract class AbstractCommandContext implements DBECommandContext {
     }
 
     @Override
-    public void undoCommand()
-    {
+    public void undoCommand() {
         if (getUndoCommand() == null) {
             throw new IllegalStateException("Can't undo command");
         }
         List<CommandInfo> processedCommands = new ArrayList<>();
         synchronized (commands) {
-            CommandInfo lastCommand = commands.get(commands.size() - 1);
+            CommandInfo lastCommand = commands.getLast();
             if (!lastCommand.command.isUndoable()) {
                 throw new IllegalStateException("Last executed command is not undoable");
             }
@@ -562,8 +522,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
     }
 
     @Override
-    public void redoCommand()
-    {
+    public void redoCommand() {
         if (getRedoCommand() == null) {
             throw new IllegalStateException("Can't redo command");
         }
@@ -573,9 +532,9 @@ public abstract class AbstractCommandContext implements DBECommandContext {
             CommandInfo commandInfo = null;
             // Redo batch
             while (!undidCommands.isEmpty() &&
-                (commandInfo == null || undidCommands.get(undidCommands.size() - 1).prevInBatch == commandInfo))
+                (commandInfo == null || undidCommands.getLast().prevInBatch == commandInfo))
             {
-                commandInfo = undidCommands.remove(undidCommands.size() - 1);
+                commandInfo = undidCommands.removeLast();
                 commands.add(commandInfo);
                 processedCommands.add(commandInfo);
             }
@@ -598,8 +557,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         undidCommands.clear();
     }
 
-    private List<CommandQueue> getCommandQueues()
-    {
+    private List<CommandQueue> getCommandQueues() {
         if (commandQueues != null) {
             return commandQueues;
         }
@@ -608,7 +566,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         CommandInfo aggregator = null;
         // Create queues from commands
         for (CommandInfo commandInfo : commands) {
-            if (commandInfo.command instanceof DBECommandAggregator) {
+            if (commandInfo.command instanceof DBECommandAggregator && !commandInfo.command.ignoreNestedCommands()) {
                 aggregator = commandInfo;
             }
             DBPObject object = commandInfo.command.getObject();
@@ -768,8 +726,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         CommandInfo prevInBatch = null;
         boolean executed = false;
 
-        CommandInfo(DBECommand<?> command, DBECommandReflector<?, DBECommand<?>> reflector)
-        {
+        CommandInfo(DBECommand<?> command, DBECommandReflector<?, DBECommand<?>> reflector) {
             this.command = command;
             this.reflector = reflector;
         }
@@ -787,8 +744,7 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         private final DBEObjectManager objectManager;
         private List<CommandInfo> commands = new ArrayList<>();
 
-        private CommandQueue(DBEObjectManager objectManager, CommandQueue parent, DBPObject object)
-        {
+        private CommandQueue(DBEObjectManager objectManager, CommandQueue parent, DBPObject object) {
             this.parent = parent;
             this.object = object;
             this.objectManager = objectManager;
@@ -797,15 +753,14 @@ public abstract class AbstractCommandContext implements DBECommandContext {
             }
         }
 
-        void addSubQueue(CommandQueue queue)
-        {
+        void addSubQueue(@NotNull CommandQueue queue) {
             if (subQueues == null) {
                 subQueues = new ArrayList<>();
             }
             subQueues.add(queue);
         }
 
-        void addCommand(CommandInfo info)
+        void addCommand(@NotNull CommandInfo info)
         {
             commands.add(info);
         }
@@ -829,14 +784,14 @@ public abstract class AbstractCommandContext implements DBECommandContext {
         }
 
         @Override
-        public boolean add(DBECommand dbeCommand)
+        public boolean add(@NotNull DBECommand dbeCommand)
         {
             return commands.add(new CommandInfo(dbeCommand, null));
         }
 
+        @NotNull
         @Override
-        public Iterator<DBECommand<DBPObject>> iterator()
-        {
+        public Iterator<DBECommand<DBPObject>> iterator() {
             return new Iterator<DBECommand<DBPObject>>() {
                 private int index = -1;
                 @Override
