@@ -1,7 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
- * Copyright (C) 2011-2012 Eugene Fradkin (eugene.fradkin@gmail.com)
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,6 +35,7 @@ import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.dbeaver.ui.internal.UIConnectionMessages;
 import org.jkiss.dbeaver.ui.navigator.NavigatorUtils;
 
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -43,28 +43,52 @@ import java.util.List;
  */
 public class ProjectSelectorPanel {
 
+    private Label headerLabel;
     private DBPProject selectedProject;
 
-    public ProjectSelectorPanel(@NotNull Composite parent, @Nullable DBPProject activeProject, int style) {
-        this(parent, activeProject, style, false);
+    public ProjectSelectorPanel(
+        @NotNull Composite parent,
+        @Nullable DBPProject activeProject,
+        int style
+    ) {
+        this(parent, activeProject, style, false, true);
     }
 
-    public ProjectSelectorPanel(@NotNull Composite parent, @Nullable DBPProject activeProject, int style, boolean showOnlyEditable) {
-        final List<? extends DBPProject> projects = DBWorkbench.getPlatform().getWorkspace().getProjects();
+    public ProjectSelectorPanel(
+        @NotNull Composite parent,
+        @Nullable DBPProject activeProject,
+        int style,
+        boolean showOnlyEditable
+    ) {
+        this(parent, activeProject, style, showOnlyEditable, true);
+    }
+
+    public ProjectSelectorPanel(
+        @NotNull Composite parent,
+        @Nullable DBPProject activeProject,
+        int style,
+        boolean showOnlyEditable,
+        boolean alignRight
+    ) {
+        final List<? extends DBPProject> projects = new ArrayList<>(
+            DBWorkbench.getPlatform().getWorkspace().getProjects());
+        projects.sort((o1, o2) ->
+            o1.getDisplayName().compareToIgnoreCase(o2.getDisplayName()));
+
         if (showOnlyEditable) {
             projects.removeIf(p -> !p.hasRealmPermission(RMConstants.PERMISSION_PROJECT_DATASOURCES_EDIT));
         }
         if (projects.size() == 1) {
-            selectedProject = projects.get(0);
+            selectedProject = projects.getFirst();
         } else if (projects.size() > 1) {
 
             boolean showIcon = (style & SWT.ICON) != 0;
             Composite projectGroup = UIUtils.createComposite(parent, showIcon ? 3 : 2);
-            projectGroup.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_END));
+            projectGroup.setLayoutData(new GridData(alignRight ? GridData.HORIZONTAL_ALIGN_END : GridData.HORIZONTAL_ALIGN_BEGINNING));
             if (showIcon) {
                 new Label(projectGroup, SWT.NONE).setImage(DBeaverIcons.getImage(DBIcon.PROJECT));
             }
-            UIUtils.createControlLabel(projectGroup, UIConnectionMessages.dialog_connection_driver_project);
+            this.headerLabel = UIUtils.createControlLabel(projectGroup, UIConnectionMessages.dialog_connection_driver_project);
 
             final Combo projectCombo = new Combo(projectGroup, SWT.DROP_DOWN | SWT.READ_ONLY);
             projectCombo.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
@@ -74,9 +98,12 @@ public class ProjectSelectorPanel {
             }
 
             if (selectedProject == null) {
-                selectedProject = NavigatorUtils.getSelectedProject();
+                selectedProject = activeProject;
+                if (selectedProject == null) {
+                    selectedProject = NavigatorUtils.getSelectedProject();
+                }
                 if (!projects.contains(selectedProject)) {
-                    selectedProject = projects.get(0);
+                    selectedProject = projects.getFirst();
                 }
             }
             projectCombo.setText(selectedProject.getName());
@@ -87,10 +114,6 @@ public class ProjectSelectorPanel {
                     onProjectChange();
                 }
             });
-
-            if (projects.size() < 2) {
-                //projectCombo.setEnabled(false);
-            }
         }
     }
 
@@ -98,8 +121,13 @@ public class ProjectSelectorPanel {
 
     }
 
+    @Nullable
     public DBPProject getSelectedProject() {
         return selectedProject;
+    }
+
+    public void setLabel(String text) {
+        this.headerLabel.setText(text);
     }
 
 }
