@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2024 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,6 +37,7 @@ import org.eclipse.ui.texteditor.spelling.SpellingService;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
+import org.jkiss.dbeaver.model.DBPDataSource;
 import org.jkiss.dbeaver.model.sql.SQLScriptElement;
 import org.jkiss.dbeaver.ui.editors.EditorUtils;
 import org.jkiss.dbeaver.ui.editors.sql.SQLEditorBase;
@@ -125,7 +126,7 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
         try {
             data = resource.getPersistentProperty(COLLAPSED_ANNOTATIONS);
         } catch (CoreException e) {
-            log.warn("Core Exception caught while reading saved collapsed folding positions", e);
+            log.warn("Core Exception caught while reading saved collapsed folding positions: " + e.getMessage());
             return Collections.emptySet();
         }
         if (data == null) {
@@ -260,7 +261,7 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
         }
         Collection<SQLScriptElementImpl> deletedPositions = cachedQueries.stream()
             .filter(element -> !parsedElements.contains(element))
-            .collect(Collectors.toList());
+            .toList();
         Annotation[] deletions = deletedPositions.stream()
             .map(SQLScriptElementImpl::getAnnotation)
             .toArray(Annotation[]::new);
@@ -370,12 +371,10 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
 
         @Override
         public boolean equals(Object o) {
-            if (o instanceof Position) {
-                Position p = (Position) o;
+            if (o instanceof Position p) {
                 return equals(p.getOffset(), p.getLength());
             }
-            if (o instanceof SQLScriptElement) {
-                SQLScriptElement e = (SQLScriptElement) o;
+            if (o instanceof SQLScriptElement e) {
                 return equals(e.getOffset(), e.getLength());
             }
             return false;
@@ -416,6 +415,12 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
         public void reset() {
             //do nothing
         }
+
+        @Nullable
+        @Override
+        public DBPDataSource getDataSource() {
+            return null;
+        }
     }
 
     /**
@@ -423,6 +428,7 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
      */
     private static class SpellingProblemCollector implements ISpellingProblemCollector {
 
+        @Nullable
         private final IAnnotationModel annotationModel;
         private Map<Annotation, Position> addedAnnotations;
         private final int regionOffset;
@@ -430,15 +436,16 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
         private final Object lockObject;
 
         public SpellingProblemCollector(
-            IAnnotationModel annotationModel,
+            @Nullable IAnnotationModel annotationModel,
             int regionOffset,
             int regionLength
         ) {
             this.annotationModel = annotationModel;
             if (this.annotationModel instanceof ISynchronizable) {
-                lockObject = ((ISynchronizable) this.annotationModel).getLockObject();
+                Object amLock = ((ISynchronizable) this.annotationModel).getLockObject();
+                lockObject = Objects.requireNonNullElse(amLock, this.annotationModel);
             } else {
-                lockObject = this.annotationModel;
+                lockObject = Objects.requireNonNullElse(this.annotationModel, this);
             }
             this.regionOffset = regionOffset;
             this.regionLength = regionLength;
@@ -458,9 +465,16 @@ public class SQLReconcilingStrategy implements IReconcilingStrategy, IReconcilin
 
         @Override
         public void endCollecting() {
+            if (annotationModel == null) {
+                return;
+            }
             List<Annotation> toRemove = new ArrayList<>();
 
             synchronized (lockObject) {
+                if (annotationModel == null) {
+                    addedAnnotations = null;
+                    return;
+                }
                 Iterator<Annotation> iter = annotationModel.getAnnotationIterator();
                 while (iter.hasNext()) {
                     Annotation annotation = iter.next();
